handling requests to api

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 ADMINS=995991268
-BOT_TOKEN=5042675115:AAH4hD250JxIHF03ogVOBpjZCFgb_vtzVHA
+BOT_TOKEN=1878898481:AAE6L5EtFBbKxkKjKfuNlQLPfF8QctIe_1U
 ip=localhost
-
 DB_USER=postgres
-DB_PASS=Topson_2024
+DB_PASS=fazliddin2002
 DB_NAME=OrderEcommerseDB
 DB_HOST=localhost
 DB_PORT=5432
+
